<resources>
    <string name="app_name">TravelJournal</string>
    <string name="best_of_greece">Best of Greece</string>
    <string name="destinations">Destinations:</string>
    <string name="athens_mykonos_santorini">Athens, Mykonos, Santorini</string>
    <string name="tour_length">Tour length</string>
    <string name="_10_days">10 days</string>
    <string name="country_region">Country Region:</string>
    <string name="regions">Regions</string>
    <string name="greek_islands_aegean_islands_cyclades_greece_athens_santorini_amp_mykonos"><![CDATA[Greek Islands, Aegean Islands, Cyclades Greece, Athens Santorini & Mykonos]]></string>
    <string name="year_olds">year olds</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="travel_journal">Travel Journal</string>
    <string name="joe_rogan_gmail_com">joe.rogan@gmail.com</string>
    <string name="joe_rogan">Joe Rogan</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about_us">About Us</string>
    <string name="about_us_version">Version 1.0</string>
    <string name="about_us_developer">Developer: Coconu Robert-Iulian</string>
    <string name="trip_name">Trip name:</string>
    <string name="destination">Destination</string>

    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_type">Trip Type:</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="empty_not_saved">You did not provide enough information</string>

</resources>