<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00B4AB"
    >

    <RelativeLayout
        android:id="@+id/about_us_complete_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/about_us_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/about_us_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-24dp"
            android:layout_toEndOf="@id/about_us_logo"
            android:fontFamily="@font/pacifico"
            android:text="@string/travel_journal"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RelativeLayout>




    <TextView
        android:id="@+id/about_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Us page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/about_us_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_version"
        app:layout_constraintTop_toBottomOf="@id/about_us_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/about_us_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_developer"
        app:layout_constraintTop_toBottomOf="@id/about_us_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>