<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/item_trip_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/cyclades_islands_greece" />

            <RelativeLayout
                android:id="@+id/title_template"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_trip_thumbnail">

                <TextView
                    android:id="@+id/item_trip_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/item_trip_checkbox"
                    android:text="Private Sicily and many other stuff that fills this box"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    />

                <RatingBar
                    android:id="@+id/item_trip_rating_bar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_trip_title"
                    android:layout_alignStart="@id/item_trip_title"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="#F5BD02"
                    android:rating="4"

                    />


                <CheckBox
                    android:id="@+id/item_trip_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="8dp"
                    android:button="@drawable/checkbox"
                    android:buttonTint="#FF0000" />

            </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_trip_main_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_template">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.3"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/item_trip_destinations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destinations"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/item_trip_main_details"
                    app:layout_constraintTop_toTopOf="@id/item_trip_main_details" />

                <TextView
                    android:id="@+id/item_trip_destinations_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/athens_mykonos_santorini"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="@id/item_trip_main_details" />

                <TextView
                    android:id="@+id/item_trip_country_region_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regions"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_trip_destinations_text" />

                <TextView
                    android:id="@+id/item_trip_country_region_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/greek_islands_aegean_islands_cyclades_greece_athens_santorini_amp_mykonos"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/item_trip_destinations_text" />

                <TextView
                    android:id="@+id/item_trip_age_range_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age range:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_trip_country_region_value" />

                <TextView
                    android:id="@+id/item_trip_age_range_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="3 to 99"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/item_trip_country_region_value" />

                <TextView
                    android:id="@+id/item_trip_age_range_years_old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/year_olds"
                    app:layout_constraintStart_toEndOf="@id/item_trip_age_range_value"
                    app:layout_constraintTop_toBottomOf="@id/item_trip_country_region_value" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/price_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_trip_main_details"
                android:layout_marginTop="16dp">

                <RelativeLayout
                    android:id="@+id/price_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/item_trip_tour_length_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tour_length" />

                    <TextView
                        android:id="@+id/item_trip_tour_length_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_trip_tour_length_text"
                        android:text="@string/_10_days"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_trip_price_per_day_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_trip_tour_length_value"
                        android:text="Price per day" />

                    <TextView
                        android:id="@+id/item_trip_price_per_day_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_trip_price_per_day_text"
                        android:text="€114"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/price_details"
                    android:layout_alignBottom="@id/price_details">

                    <View
                        android:id="@+id/relative_guideline"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_centerInParent="true" />


                    <TextView
                        android:id="@+id/item_trip_total_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/relative_guideline"
                        android:text="€1,143"

                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#65CCB8"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_trip_total_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/item_trip_total_price_value"
                        android:layout_alignStart="@id/item_trip_total_price_value"
                        android:text="Total price:" />

                </RelativeLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/price_section"
                android:background="@android:color/darker_gray" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>